--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="d-flex justify-content-center align-items-center vh-100 ">
     <div class="card p-4 shadow-lg bg-opacity-50" style="width: 400px; border-radius: 10px;">
       <h3 class="text-center mb-4 text-white">Login</h3>
