--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,3 +1,5 @@
+
+<app-navbar></app-navbar>
 <div class="  container d-flex justify-content-center align-items-center vh-100 ">
   <div class=" card p-5 text-white  shadow-lg transparent-bg " style="width: 50rem;" >
     <h2 class="text-center mb-4">Sign up</h2>
