--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -37,14 +37,15 @@
             </a>
           </li>
   
-          <!-- 3) إنشاء غرفة -->
-          <li class="nav-item me-3">
-            <a class="nav-link" href="#">
-              <span class="css-icon-create-room"></span>
-              Create Room
-            </a>
-          </li>
-  
+         <!-- 3) إنشاء غرفة -->
+<li class="nav-item me-3">
+  <a class="nav-link" routerLink="/generate">
+
+    <span class="css-icon-create-room"></span>
+    Create Room
+  </a>
+</li>
+
           <!-- 4) الملف الشخصي مع القائمة المنسدلة -->
           <li class="nav-item dropdown">
             <a
