--- a/src/app/pages/register/register.component.css
+++ b/src/app/pages/register/register.component.css
@@ -1,16 +1,109 @@
 body {
-  background: #1a1a1a;
-}
-.card {
-  border-radius: 15px;
-}
-.form-control {
-  border-radius: 10px;
+  background-color: #0d0215;
+  color: white;
+  font-family: Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
 }
 
-.transparent-bg {
-  background-color: rgba(255, 255, 255, 0.1); /* لون أبيض مع شفافية */
-  backdrop-filter: blur(5px); /* تأثير الضبابية */
-  border-radius: 10px; /* حواف مستديرة */
-  padding: 20px; /* مسافة داخلية */
+.container {
+  width: 600px;
+  text-align: center;
+}
+
+h1 {
+  font-size: 32px;
+  margin-bottom: 20px;
+}
+
+.google-icon {
+  font-size: 40px;
+  color: #4285F4;
+  margin-bottom: 10px;
+}
+
+.google-link {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+  text-decoration: none;
+}
+
+
+.divider {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+
+.divider span {
+  flex: 1;
+  height: 1px;
+  background-color: #999;
+  margin: 0 10px;
+}
+
+.form-grid {
+  display: flex;
+  gap: 100px;
+  justify-content: space-between;
+}
+
+.left, .right {
+  width: 80%;
+  text-align: left;
+}
+
+label {
+  display: block;
+  font-weight: bold;
+  margin-top: 10px;
+  margin-bottom: 5px;
+  color: #aaa;
+}
+
+input {
+  width: 100%;
+  padding: 12px;
+  background-color: #222;
+  border-radius: 20px;
+  border: none;
+  color: white;
+  margin-bottom: 5px;
+  font-size: 14px;
+}
+
+input:disabled {
+  opacity: 0.6;
+}
+
+.error {
+  font-size: 12px;
+  color: red;
+  margin-bottom: 10px;
+}
+
+
+.login a {
+  color: red;
+  font-weight: bold;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
+
+button {
+  margin-top: 15px;
+  padding: 12px 30px;
+  border: none;
+  background-color: #444;
+  color: white;
+  border-radius: 20px;
+  font-size: 16px;
+  cursor: pointer;
 }
