add change page

--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -1,1 +1,13 @@
-<p>change-password works!</p>
+<!-- الزرار اللي بيظهر المودال -->
+
+<!-- المودال -->
+<div class="modal-backdrop" *ngIf="showModal">
+  <div class="modal-box">
+    <button class="close-btn" (click)="closeModal()">×</button>
+
+    <input type="password" placeholder="OLD PASSWORD" [(ngModel)]="oldPassword" />
+    <input type="password" placeholder="NEW PASSWORD" [(ngModel)]="newPassword" />
+
+    <button class="confirm-btn" (click)="confirmChange()">CONFIRM</button>
+  </div>
+</div>
