--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -40,7 +40,7 @@
             <ul class="dropdown-menu">
                <a [routerLink]="['/register']"><li><i class="bi bi-person-plus-fill"></i> Sign up</li></a>
                 <a routerLink="/profile"><li><i class="bi bi-person"></i> Profile</li></a>
-                <a [routerLink]="['/register']"><li><i class="bi bi-gear"></i> Settings</li></a>
+                <a [routerLink]="['/settings']"><li><i class="bi bi-gear"></i> Settings</li></a>
                 <a  [routerLink]="['/register']"> <li><i class="bi bi-bell"></i> Notifications</li></a>
                 <a  [routerLink]="['/login']"><li class="logout">Log out</li></a>
             </ul>
