--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -19,6 +19,7 @@
     <input type="text" placeholder="User Name" />
     <input type="email" placeholder="email@gmail.com" disabled />
 
-    <button class="change-password-btn">Change Password</button>
+    <button class="change-password-btn" (click)="goToSettings()">Change Password</button>
+
   </div>
 </div>
