--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -10,48 +10,35 @@
   <div class="container">
     <h2 class="title">Login</h2>
 
-    <!-- Google login -->
-    <div class="google-login">
-      <a href="https://accounts.google.com" target="_blank" class="google-link">
-        <div class="google-icon">G</div>
-      </a>
-    </div>
-
-    <!-- Divider -->
     <div class="divider">
       <hr />
       <span>OR</span>
       <hr />
     </div>
 
-    <!-- Form -->
-    <form>
+    <form (ngSubmit)="onSubmit()">
       <div class="form-row">
-        <!-- Email field -->
         <div class="form-group">
           <label for="email">E-mail</label>
-          <input type="email" id="email" value="" placeholder="email" required />
-          <small class="error"></small>
+          <input type="email" id="email" [(ngModel)]="email" name="email" placeholder="email" required />
         </div>
 
-        <!-- Password field -->
         <div class="form-group">
           <label for="password">Password</label>
-          <input type="password" id="password" value="" placeholder="password" required />
-          <small class="error">
-
-          </small>
+          <input type="password" id="password" [(ngModel)]="password" name="password" placeholder="password" required />
         </div>
       </div>
 
-      <!-- Sign up link -->
       <p class="signup-link">
-        Don’t have an account? <a href="#">Sign up</a>
+        Don’t have an account? <a routerLink="/register">Sign up</a>
       </p>
 
-      <!-- Login button -->
+      <p *ngIf="errorMessage" class="error-message">{{ errorMessage }}</p>
+
       <button type="submit" class="submit-btn">Login</button>
     </form>
   </div>
+
+
 </body>
 </html>
